--- a/weapp/jf/package.json
+++ b/weapp/jf/package.json
@@ -15,7 +15,5 @@
   ],
   "author": "Developer",
   "license": "ISC",
-  "dependencies": {
-    "@vant/weapp": "^1.10.11"
-  }
+  "dependencies": {}
 }
