docs(frontend): 更新tsconfig配置文件注释和继承关系
添加tsconfig.json文件的编译选项注释
调整tsconfig.app.json继承基础配置并移除重复路径配置

--- a/project/ai_fullstack/frontend/notes/tsconfig.json
+++ b/project/ai_fullstack/frontend/notes/tsconfig.json
@@ -4,6 +4,7 @@
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
   ],
+  // 编译选项配置
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
