--- a/project/ai_fullstack/frontend/notes/package.json
+++ b/project/ai_fullstack/frontend/notes/package.json
@@ -24,6 +24,7 @@
     "prop-types": "^15.8.1",
     "radix-ui": "^1.4.3",
     "react": "^19.2.0",
+    "react-activation": "^0.13.4",
     "react-dom": "^19.2.0",
     "react-lazyload": "^3.2.1",
     "react-router-dom": "^7.12.0",
