--- a/project/ai_fullstack/backend/posts/package.json
+++ b/project/ai_fullstack/backend/posts/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@langchain/core": "^1.1.28",
     "@langchain/deepseek": "^1.0.14",
+    "@langchain/openai": "^1.2.10",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "^11.0.2",
