feat: 实现RAG功能并添加相关页面和API
添加RAG功能的前后端实现，包括：
- 前端添加RAG页面和组件
- 后端实现RAG接口和向量数据库查询
- 添加Git工具相关页面和路由
- 更新文档说明RAG功能

--- a/project/ai_fullstack/backend/posts/package.json
+++ b/project/ai_fullstack/backend/posts/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@langchain/classic": "^1.0.21",
     "@langchain/core": "^1.1.28",
     "@langchain/deepseek": "^1.0.14",
     "@langchain/openai": "^1.2.10",
